document that the initial release went by another name

--- a/Changes
+++ b/Changes
@@ -528,4 +528,4 @@ Revision history for JSON-Schema-Modern
           - add support for $id and $anchor in single schema documents
 
 0.001     2020-05-21 15:51:00Z
-          - Initial release.
+          - Initial release [as JSON-Schema-Draft201909].
