--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - make use of core bool functionality where it exists (perl 5.36+)
 
 0.584     2024-05-18 21:06:35Z
           - add 'get_entity_locations' helper sub to ::Document
