simplify multipleOf calculation by avoiding getting a quotient
This seems to work even on systems with ivsize=4 that would overflow on one of
the acceptance tests -- e.g. see
https://www.cpantesters.org/cpan/report/00f231ca-2fdc-11ef-98b0-b3c3213a625c

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - simplification of calculation for "multipleOf" keyword
 
 0.585     2024-06-19 04:03:36Z
           - make use of core bool functionality where it exists (perl 5.36+)
