increment $VERSION after 0.586 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.586     2024-06-23 18:46:01Z
           - simplification of calculation for "multipleOf" keyword
 
