--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - bump required version of Math::BigInt for bdiv, bmod fixes
 
 0.587     2024-06-26 22:55:11Z
           - fix multipleOf test that fails on some peculiar architectures
