--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema using a JSON Schema
 
 =head1 VERSION
 
-version 0.587
+version 0.588
 
 =head1 SYNOPSIS
 
@@ -425,7 +425,9 @@ otherwise returns the L<JSON::Schema::Modern::Document> that contains the added 
 
 or
 
-  $js->add_format_validation(no_nines => { type => 'number', sub => sub ($value) { $value =~ m/^[0-8]$$/ });
+  $js->add_format_validation(no_nines => { type => 'number', sub => sub ($value) { $value =~ m/^[0-8]+$/ });
+
+  $js->add_format_validation(8bits => { type => 'string', sub => sub ($value) { $value =~ m/^[\x00-\xFF]+$/ });
 
 Adds support for a custom format. If not supplied, the data type(s) that this format applies to
 defaults to string; all values of any other type will automatically be deemed to be valid, and will
@@ -436,6 +438,9 @@ the data type(s) supported by that format may not be changed.
 
 Be careful to not mutate the type of the value while checking it -- for example, if it is a string,
 do not apply arithmetic operators to it -- or subsequent type checks on this value may fail.
+
+See L<https://spec.openapis.org/registry/format/> for a registry of known and useful formats; for
+compatibility reasons, avoid defining a format listed here with different semantics.
 
 =head2 add_vocabulary
 
@@ -582,10 +587,11 @@ will need to be manually added after thawing.
 
   sub get_evaluator (...) {
     my $serialized_file = Path::Tiny::path($filename);
+    my $schema_file = Path::Tiny::path($schema_filename);
     my $js;
-    if (some condition that checks if the schemas have changed...) {
+    if ($serialized_file->stat->mtime < $schema_file->stat->mtime)) {
       $js = JSON::Schema::Modern->new;
-      $js->add_schema(decode_json(...));  # your application schema
+      $js->add_schema(decode_json($schema_file->slurp_raw));  # your application schema
       my $frozen = Sereal::Encoder->new({ freeze_callbacks => 1 })->encode($js);
       $serialized_file->spew_raw($frozen);
     }
