skip these tests when ivsize is too small to divide without overflow
e.g. see results on quadmath systems:
https://www.cpantesters.org/cpan/report/5e778500-34e3-11ef-bafe-85da1fbb957f

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - skip unpassable tests when ivsize < 8
 
 0.588     2024-06-28 17:14:22Z
           - bump required version of Math::BigInt for bdiv, bmod fixes
