increment $VERSION after 0.589 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.589     2024-07-06 21:07:44Z
           - skip unpassable tests when ivsize < 8
 
