--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.590     2024-09-07 00:48:50Z
           - "strict" mode is now recognized by validate_schema(), to report on
             any unrecognized keywords used in the schema being validated
