allow dualvars as long as the stringified number matches the string form
This lets us work around an issue in YAML::XS where all numbers are decoded
as SVs with both the PV and NV or IV flags, which we have been interpreting as
"ambiguous type", which therefore causes validation errors when decoding json
schemas from yaml files using YAML::XS.

This also seems to be the behaviour of Cpanel::JSON::XS, where if the two
values match, the value is serialized as a number, and if they differ it is
serialized as a string:

  use Cpanel::JSON::XS;
  use Scalar::Util 'dualvar';
  say encode_json({foo => dualvar(5, '5'});
  say encode_json({foo => dualvar(5, 'five')})

  {"foo":5}
  {"foo":"five"}

This gets us closer to 5.36+ behaviour where simply using a number in string
context (which adds a PV to the scalar) does not make the number unusable
in json schemas.  However, it may cause problems with other code downstream
that attempts to use the value and cannot tell if it is a string or number
(e.g. a database driver).

We can use the created_as_* subs in builtin and builtin::compat, except we
are stricter than created_as_string (which allows different numeric and string
parts).

--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - improved handling of numeric type checking in draft4
+          - numeric type checking is relaxed, now allowing for dualvars
+            arising from the simple case of using a number in string context
+            or a string in numeric context (only a problem in perls <5.36)
 
 0.593     2024-10-14 18:43:23Z
           - fix new integer type tests that fail on perls < 5.35.9
