JSON-Schema-Modern-0.594
          - improved handling of numeric type checking in draft4
          - numeric type checking is relaxed, now allowing for dualvars
            arising from the simple case of using a number in string context
            or a string in numeric context (only a problem in perls <5.36)

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema using a JSON Schema
 
 =head1 VERSION
 
-version 0.593
+version 0.594
 
 =head1 SYNOPSIS
 
@@ -637,14 +637,13 @@ See also L<OpenAPI::Modern/CACHING>.
 =head2 Types
 
 Perl is a more loosely-typed language than JSON. This module delves into a value's internal
-representation in an attempt to derive the true "intended" type of the value. However, if a value is
-used in another context (for example, a numeric value is concatenated into a string, or a numeric
-string is used in an arithmetic operation), additional flags can be added onto the variable causing
-it to resemble the other type. This should not be an issue if data validation is occurring
+representation in an attempt to derive the true "intended" type of the value.
+This should not be an issue if data validation is occurring
 immediately after decoding a JSON payload, or if the JSON string itself is passed to this module.
-If you are still having difficulties, make sure you are using Perl's fastest and most trusted and
+If you are having difficulties, make sure you are using Perl's fastest and most trusted and
 reliable JSON decoder, L<Cpanel::JSON::XS>.
-Other JSON decoders are known to produce data with incorrect data types.
+Other JSON decoders are known to produce data with incorrect data types,
+and data from other sources may also be problematic.
 
 For more information, see L<Cpanel::JSON::XS/MAPPING>.
 
