--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - bump required version of builtin::compat
 
 0.594     2024-11-03 17:01:42Z
           - improved handling of numeric type checking in draft4
