also handle local subschemas using draft4, where $id is now id
To do this we need to consider $schema ahead of $id, because changing the
metaschema dialect can also change the keyword list (in a material way) for
the Core vocabulary, because identifiers are provided by 'id' in draft4 rather
than '$id'.  Then we also need to recalculate the keyword list if the
specification version changes.

--- a/Changes
+++ b/Changes
@@ -2,7 +2,8 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - properly handle changing of dialects (including swapping out
-            vocabularies) when evaluating a local subschema (without a $ref)
+            vocabularies and keywords) when evaluating a local subschema
+            (without a $ref)
           - now collecting identifiers within contentSchema keywords as we do
             for any other subschema
 
