--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Revision history for JSON-Schema-Modern
           - the specification version can now be overridden when constructing
             Documents directly (rather than via the evaluator), if not
             specified by the "$schema" keyword
+          - some fixes for $id handling in earlier drafts
 
 0.599     2025-01-26 22:54:02Z
           - the boolean overload in JSON::Schema::Modern::Result is now
