--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - fix format acceptance tests that would fail when some optional
+            modules are not installed
 
 0.597     2024-12-07 23:30:38Z
           - report installed version of builtin
