increment $VERSION after 0.601 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.601     2025-02-02 00:23:38Z
           - check for builtin::Backport at install time
 
