add some more checks for inconsistent traverse or evaluate results

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - more checks at traverse and evaluation time for inconsistent
+            results
 
 0.601     2025-02-02 00:23:38Z
           - check for builtin::Backport at install time
