--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - documentation now makes a note of the special licence for JSON
+            Schema schema files
 
 0.607     2025-04-01 19:35:50Z
           - now performing stricter email address validation for the 'email' and
