--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.610     2025-05-16 20:58:28Z
           - evaluate() and evaluate_json_string() can no longer be called with
             a JSON::Schema::Modern::Document object; now you should only pass
