--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.611     2025-05-31 03:38:55Z
           - fix integer vs number distinction in draft4 for x.0 values. This
             comes at the expense of properly identifying other numbers as
