JSON-Schema-Modern-0.613
          - now checking for keyword collisions in custom vocabulary classes
          - now using builtin booleans when available (requires perl 5.36 and
            Cpanel::JSON::XS 4.38)

--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema using a JSON Schema
 
 =head1 VERSION
 
-version 0.612
+version 0.613
 
 =head1 SYNOPSIS
 
@@ -30,9 +30,9 @@ validator, targeting the currently-latest
 L<Draft 2020-12|https://json-schema.org/specification-links.html#2020-12>
 version of the specification.
 
-=head1 CONFIGURATION OPTIONS
+=head1 CONSTRUCTOR ARGUMENTS
 
-These values are all passed as arguments to the constructor.
+Unless otherwise noted, these are also available as read-only accessors.
 
 =head2 specification_version
 
@@ -113,6 +113,8 @@ the format sub is a subref that takes one argument and returns a boolean result.
 be specified in the form of C<< { $format_name => { type => $type, sub => $format_sub } } >>,
 where the type indicates which of the data model types (null, object, array, boolean, string,
 or number) the instance value must be for the format validation to be considered.
+
+Not available as an accessor.
 
 =head2 validate_content_schemas
 
@@ -288,11 +290,11 @@ The schema must be in one of these forms:
 
 =item *
 
-a Perl data structure, such as what is returned from a JSON decode operation,
+a Perl data structure, such as what is returned from a JSON decode operation
 
 =item *
 
-or a URI string indicating the identity of such a schema.
+or a URI string (or L<Mojo::URL>) indicating the identity of such a schema.
 
 =back
 
