--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.615     2025-07-12 16:12:36Z
           - do not allow the use of builtin bools when Storable is too old to
             know how to serialize them
