--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.616     2025-07-26 23:15:28Z
           - documentation notes added for which definitions can be overridden
             (formats, media-types and encodings can; vocabularies cannot).
